feat(backend): implement get current user profile api
